--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,12 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+app
+www/static/dist
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
-
-app/
-
-www/static/js/admin/combo.js
+# IDE config
+.idea
