--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   },
   "dependencies": {
     "babel-runtime": "^5.7.0",
+    "highlight.js": "^8.7.0",
+    "marked": "^0.3.5",
     "moment": "^2.10.6",
     "superagent": "^1.2.0"
   }
