--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^5.3.2",
     "browser-sync": "^2.8.0",
     "chalk": "^1.1.0",
+    "codemirror": "^5.5.0",
     "del": "^1.2.0",
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^3.0.0",
