--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "highlight.js": "^8.7.0",
     "marked": "^0.3.5",
     "moment": "^2.10.6",
-    "superagent": "^1.2.0"
+    "superagent": "^1.2.0",
+    "thinkjs": "^2.0.4"
   }
 }
