--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "gulp serve",
     "compile": "gulp",
     "start": "node www/index",
-    "install": "gulp install"
+    "install": "gulp && node install.js && gulp \"server script\"",
+    "release": "gulp release"
   },
   "repository": {
     "type": "git",
@@ -74,6 +75,7 @@
     "run-sequence": "^1.1.1",
     "superagent": "^1.2.0",
     "thinkjs": "^2.0.6",
+    "through2": "^2.0.0",
     "webpack": "^1.10.1"
   }
 }
