--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
+    "moment": "^2.11.1",
     "nunjucks": "^2.3.0",
     "thinkjs": "2.1.x"
   },
@@ -19,5 +20,7 @@
     "babel-preset-stage-1": "6.x.x",
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-core": "6.x.x"
-  }
+  },
+  "repository": "",
+  "license": "MIT"
 }
