--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "babel-runtime": "6.x.x",
     "moment": "^2.11.1",
     "nunjucks": "^2.3.0",
+    "react-mixin": "^3.0.3",
+    "reflux": "^0.3.0",
     "thinkjs": "2.1.x"
   },
   "devDependencies": {
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "6.x.x",
+    "babel-preset-stage-0": "6.x.x",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^1.0.3",
