--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
+    "css-loader": "^0.23.1",
     "history": "^1.17.0",
+    "moment": "^2.11.2",
     "react": "^0.14.7",
+    "react-datetime": "^2.0.3",
     "react-dom": "^0.14.7",
     "react-mixin": "^3.0.3",
     "react-router": "^2.0.0-rc5",
