--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-stage-0": "6.x.x",
     "css-loader": "^0.23.1",
     "history": "^1.17.0",
+    "marked": "^0.3.5",
     "moment": "^2.11.2",
     "react": "^0.14.7",
     "react-datetime": "^2.0.3",
