--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "phpass": "^0.1.1",
     "qrcode-react": "^0.1.10",
     "react-bootstrap-validation": "^0.1.10",
+    "react-fontawesome": "^0.3.3",
     "speakeasy": "^2.0.0",
     "superagent": "^1.7.2",
     "thinkit": "^4.6.0",
