--- a/package.json
+++ b/package.json
@@ -28,25 +28,26 @@
     "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "history": "^1.17.0",
     "marked": "^0.3.5",
+    "md5": "^2.0.0",
     "moment": "^2.11.2",
+    "qrcode-react": "^0.1.10",
+    "rc-select": "^5.10.0",
     "react": "^0.14.7",
+    "react-bootstrap-validation": "^0.1.10",
     "react-datetime": "^2.0.3",
     "react-dom": "^0.14.7",
+    "react-fontawesome": "^0.3.3",
     "react-mixin": "^3.0.3",
     "react-router": "^2.0.0-rc5",
     "reflux": "^0.3.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "classnames": "^2.2.3",
-    "qrcode-react": "^0.1.10",
-    "react-bootstrap-validation": "^0.1.10",
-    "react-fontawesome": "^0.3.3",
     "speakeasy": "^2.0.0",
+    "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
-    "md5": "^2.0.0"
+    "webpack": "^1.12.12"
   },
   "repository": "",
   "license": "MIT"
