--- a/nginx.conf
+++ b/nginx.conf
@@ -35,9 +35,13 @@ server {
         deny all;
     }
 
+
     location ~ /static/ {
         etag         on;
         expires      max;
+    }
+    location ~ /theme/ {
+        deny all;
     }
 }   
 
