--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "babel --presets es2015-loose,stage-1 --plugins transform-runtime src/ --out-dir app/",
     "watch-compile": "node -e \"console.log('<npm run watch-compile> no longer need, use <npm start> command direct.');console.log();\"",
     "watch": "npm run watch-compile",
-    "copy-package": "node copy_package.js"
+    "copy-package": "node copy_package.js",
+    "webpack": "webpack --watch"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
