--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "speakeasy": "2.0.0"
   },
   "devDependencies": {
+    "autobind-decorator": "^1.3.3",
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-loader": "^6.2.1",
