--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "request": "^2.69.0",
     "speakeasy": "2.0.0",
     "thinkit": "^4.6.0",
-    "thinkjs": "2.1.x",
+    "thinkjs": "2.x.x",
     "to-markdown": "^2.0.1",
     "xml2js": "^0.4.16"
   },
