--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-react": "^6.3.13",
