去除重复依赖

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nunjucks": "^2.3.0",
     "phpass": "^0.1.1",
     "request": "^2.69.0",
+    "source-map-support": "^0.4.0",
     "speakeasy": "2.0.0",
     "thinkjs": "2.x.x",
     "to-markdown": "^2.0.1",
@@ -40,7 +41,6 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "history": "^1.17.0",
-    "marked": "^0.3.5",
     "md5": "^2.0.0",
     "qrcode-react": "^0.1.10",
     "rc-select": "^5.10.0",
