--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.7.4",
     "autobind-decorator": "^1.3.3",
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.x.x",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015-loose": "6.x.x",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
+    "babel-preset-stage-1": "^6.5.0",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "history": "^1.17.0",
