--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Firekylin",
   "description": "A Simple & Fast Node Bloging Platform Base On ThinkJS 2.0 & ReactJS & ES2015+",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "scripts": {
     "start": "node www/development.js",
     "compile": "babel --presets es2015-loose,stage-1 --plugins transform-runtime src/ --out-dir app/",
@@ -22,6 +22,7 @@
     "phpass": "^0.1.1",
     "push-to-firekylin": "^0.2.2",
     "request": "^2.69.0",
+    "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
     "speakeasy": "2.0.0",
     "thinkjs": "2.x.x",
