--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-eslint": "^6.0.4",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "history": "^1.17.0",
