--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
     "babel-preset-stage-1": "^6.5.0",
+    "brace": "^0.8.0",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "history": "^1.17.0",
@@ -49,6 +50,7 @@
     "qrcode-react": "^0.1.10",
     "rc-select": "^5.10.0",
     "react": "^0.14.7",
+    "react-ace": "^3.4.1",
     "react-anything-sortable": "^1.5.0",
     "react-bootstrap": "^0.28.3",
     "react-bootstrap-validation": "^0.1.11",
