--- a/www/theme/firekylin/package.json
+++ b/www/theme/firekylin/package.json
@@ -9,6 +9,11 @@
       "help": "在这里，输入您需要在顶部显示的图片的URL地址。 图像宽度应大于 250 像素。 建议宽度 500 像素。 建议高度 1200 像素。"
     },
     {
+      "type": "color",
+      "name": "sidebarColor",
+      "label": "主题左侧文字颜色"
+    },
+    {
       "type": "css",
       "name": "customCSS",
       "label": "自定义 CSS",
