Use stc 2.0 instead

--- a/package.json
+++ b/package.json
@@ -61,6 +61,14 @@
     "react-mixin": "^3.0.3",
     "react-router": "^2.0.0-rc5",
     "reflux": "^0.3.0",
+    "stc": "^2.0.2",
+    "stc-css-combine": "^1.0.1",
+    "stc-css-compress": "^1.0.1",
+    "stc-html-compress": "^1.0.1",
+    "stc-localstorage": "^1.0.3",
+    "stc-localstorage-nunjucks": "^1.0.1",
+    "stc-resource-version": "^1.0.0",
+    "stc-uglify": "^1.0.1",
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
     "webpack": "^1.12.12"
