--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch-compile": "node -e \"console.log('<npm run watch-compile> no longer need, use <npm start> command direct.');console.log();\"",
     "watch": "npm run watch-compile",
     "copy-package": "node copy_package.js",
-    "webpack": "webpack --watch"
+    "webpack": "webpack --watch",
+    "webpack.build": "webpack"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
