--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nunjucks": "^2.3.0",
     "phpass": "^0.1.1",
     "push-to-firekylin": "^0.2.2",
+    "qiniu": "^6.1.13",
     "request": "^2.69.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
