--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "stc-uglify": "^1.0.1",
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
+    "upyun": "^2.0.4",
     "webpack": "^1.12.12"
   },
   "repository": "https://github.com/75team/firekylin",
