--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015-loose": "6.x.x",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
     "babel-preset-stage-1": "^6.5.0",
@@ -73,7 +73,7 @@
     "stc-uglify": "^1.0.1",
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
-    "webpack": "^1.12.12"
+    "webpack": "^2.2.0"
   },
   "repository": "https://github.com/75team/firekylin",
   "license": "MIT"
