--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
     "babel-preset-stage-1": "^6.5.0",
