--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-dom": "^0.14.7",
     "react-mixin": "^3.0.3",
     "react-router": "^2.0.0-rc5",
-    "react-treebeard": "^1.1.4",
+    "react-ui-tree": "^2.6.0",
     "reflux": "^0.3.0",
     "stc": "^2.0.2",
     "stc-css-combine": "^1.0.1",
