--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
     "brace-style": [2, "1tbs", { "allowSingleLine": true }],
     "no-trailing-spaces": 2,
     "nonblock-statement-body-position": 2,
+    "newline-per-chained-call": [2, {"ignoreChainWithDepth": 3}],
     "space-before-blocks": 2,
     "space-in-parens": 2,
     "semi-spacing": 2,
