--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "codemirror": "^5.24.2",
     "css-loader": "^0.23.1",
     "eslint": "^3.19.0",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
     "history": "^1.17.0",
     "md5": "^2.0.0",
