--- a/.eslintrc
+++ b/.eslintrc
@@ -54,7 +54,10 @@
     "semi-spacing": 2,
     "comma-spacing": 2,
     "no-tabs": 2,
+    "eqeqeq": 2,
+    "no-multi-spaces": 2,
     "new-parens": 2,
+    "no-implicit-globals": 2,
     "import/first": 2,
     "import/no-duplicates": 2,
     'import/extensions': [2, 'always', {
