--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "^6.10.3",
     "history": "^1.17.0",
     "md5": "^2.0.0",
+    "pre-commit": "^1.2.2",
     "qrcode-react": "^0.1.10",
     "rc-select": "^5.10.0",
     "react": "^0.14.7",
@@ -82,5 +83,6 @@
     "webpack": "^2.2.0"
   },
   "repository": "https://github.com/75team/firekylin",
-  "license": "MIT"
+  "license": "MIT",
+  "pre-commit": ["lint-break-on-errors"]
 }
