--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "webpack": "webpack --watch",
     "webpack.build": "webpack",
     "webpack.build.production": "webpack --config=webpack.production.config.babel.js",
-    "lint": "eslint ./src -f table --ext .js --ext .jsx || true",
+    "lint": "eslint ./src ./www/theme/firekylin -f table --ext .js --ext .jsx || true",
     "lint-break-on-errors": "eslint ./src -f table --ext .js --ext .jsx"
   },
   "dependencies": {
