ESLint: include ./*.js

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:react/recommended",
     "plugin:import/errors",
     "plugin:import/warnings"
   ],
