--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "webpack": "webpack --watch",
     "webpack.build": "webpack",
     "webpack.build.production": "webpack --config=webpack.production.config.babel.js",
-    "lint": "eslint ./src ./www/theme/firekylin -f table --ext .js --ext .jsx || true",
-    "lint-break-on-errors": "eslint ./src ./www/theme/firekylin -f table --ext .js --ext .jsx"
+    "lint": "eslint ./src ./*.js ./www/theme/firekylin -f table --ext .js --ext .jsx || true",
+    "lint-break-on-errors": "eslint ./src ./*.js ./www/theme/firekylin -f table --ext .js --ext .jsx"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
