--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "copy-package": "node bin/copy_package.js",
     "webpack": "webpack --watch",
     "webpack.build": "webpack",
-    "webpack.build.production": "webpack --config=webpack.production.config.babel.js"
+    "webpack.build.production": "webpack --config=webpack.production.config.babel.js",
+    "lint": "eslint ./src ./*.js ./www/theme/firekylin -f table --ext .js --ext .jsx || true",
+    "lint-break-on-errors": "eslint ./src ./*.js ./www/theme/firekylin -f table --ext .js --ext .jsx"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
@@ -49,8 +51,12 @@
     "classnames": "^2.2.3",
     "codemirror": "^5.24.2",
     "css-loader": "^0.23.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.3",
     "history": "^1.17.0",
     "md5": "^2.0.0",
+    "pre-commit": "^1.2.2",
     "qrcode-react": "^0.1.10",
     "rc-select": "^5.10.0",
     "react": "^0.14.7",
@@ -77,5 +83,6 @@
     "webpack": "^2.2.0"
   },
   "repository": "https://github.com/75team/firekylin",
-  "license": "MIT"
+  "license": "MIT",
+  "pre-commit": ["lint-break-on-errors"]
 }
