--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
     "no-unused-vars": 1,
     "no-unused-expressions": 0,
     "react/jsx-no-undef": 2,
+    "react/no-find-dom-node": 0,
     "new-cap": 0,
     "no-shadow": 0,
     "no-use-before-define": 0,
@@ -62,10 +63,8 @@
     "no-implicit-globals": 2,
     "import/first": 2,
     "import/no-duplicates": 2,
-    'import/extensions': [2, 'always', {
-      js: 'never',
-      jsx: 'never'
-    }],
+    "import/extensions": 0,
+    "import/no-unresolved": 0,
     "import/order": 2,
     "import/no-absolute-path": 2,
     "import/newline-after-import": 2,
