--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "webpack": "webpack --watch",
     "webpack.build": "webpack",
     "webpack.build.production": "webpack --config=webpack.production.config.babel.js",
-    "lint": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --cache -f table --ext .js,.jsx || true",
-    "lint-fix": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --cache -f table --ext .js,.jsx --fix || true",
-    "lint-break-on-errors": "echo 'Running ESLint...\n(Autofix with `npm run lint-fix`)' && eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --cache -f table --ext .js,.jsx"
+    "lint": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx || true",
+    "lint-fix": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx --fix || true",
+    "lint-break-on-errors": "echo 'Running ESLint...\n(Autofix with `npm run lint-fix`)' && eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
@@ -53,6 +53,7 @@
     "codemirror": "^5.24.2",
     "css-loader": "^0.23.1",
     "eslint": "^3.19.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
     "history": "^1.17.0",
@@ -85,5 +86,7 @@
   },
   "repository": "https://github.com/firekylin/firekylin",
   "license": "MIT",
-  "pre-commit": ["lint-break-on-errors"]
+  "pre-commit": [
+    "lint-break-on-errors"
+  ]
 }
