--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "webpack.build.production": "webpack --config=webpack.production.config.babel.js",
     "lint": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx || true",
     "lint-fix": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx --fix || true",
-    "lint-break-on-errors": "echo 'Running ESLint...\n(Autofix with `npm run lint-fix`)' && eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx"
+    "lint-break-on-errors": "echo 'Running ESLint...\n(Autofix with `npm run lint-fix`)' && eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx",
+    "check-extraneous-pkgs": "npm list --depth=0"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
@@ -87,6 +88,7 @@
   "repository": "https://github.com/firekylin/firekylin",
   "license": "MIT",
   "pre-commit": [
+    "check-extraneous-pkgs",
     "lint-break-on-errors"
   ]
 }
