--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-runtime": "6.x.x",
     "highlight.js": "^9.2.0",
+    "jszip": "^3.1.3",
     "markdown-toc": "^1.0.2",
     "marked": "^0.3.5",
     "mathjax": "^2.7.1",
