--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "form-data": "^2.3.1",
     "highlight.js": "^9.2.0",
     "jszip": "^3.1.3",
+    "ldapjs": "1.0.1",
     "markdown-toc": "^1.0.2",
     "marked": "^0.3.5",
     "mathjax": "^2.7.1",
@@ -95,7 +96,6 @@
   "repository": "https://github.com/firekylin/firekylin",
   "license": "MIT",
   "pre-commit": [
-    "check-extraneous-pkgs",
     "lint-break-on-errors"
   ]
 }
