--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,18 @@ node_js:
 cache:
   directories:
     - node_modules
-
 addons:
   ssh_known_hosts: firekylin.org
-before_install:
+
+install: npm install
+script: npm run check-extraneous-pkgs
+before_depoly:
   - openssl aes-256-cbc -K $encrypted_b487d5435939_key -iv $encrypted_b487d5435939_iv -in .travis/deploy_rsa.enc -out ~/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/id_rsa
-install: npm install
-script: sh bin/build.sh
-on:
-  tags: true
+deploy:
+  provider: script
+  script: sh bin/build.sh
+  on:
+    tags: true  
