--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "check-extraneous-pkgs": "npm list --depth=0 && echo '[SUCCESS] No extraneous packages.' || (echo '[INFO] Pruning extraneous packages...\n' && npm prune)"
   },
   "dependencies": {
+    "ali-oss": "^4.11.3",
     "babel-runtime": "6.x.x",
     "highlight.js": "^9.2.0",
     "jszip": "^3.1.3",
