add admin model, service

--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "lint-fix": "eslint --fix src/"
   },
   "dependencies": {
+    "ali-oss": "^4.12.2",
+    "co": "^4.6.0",
+    "form-data": "^2.3.1",
+    "highlight.js": "^9.12.0",
+    "https": "^1.0.0",
+    "jszip": "^3.1.5",
+    "markdown-toc": "^1.2.0",
+    "marked": "^0.3.12",
+    "moment": "^2.20.1",
+    "phpass": "^0.1.1",
+    "qiniu": "^7.1.2",
     "think-cache": "^1.0.0",
-    "think-session": "^1.0.0",
     "think-cache-file": "^1.0.8",
+    "think-logger3": "^1.0.0",
     "think-model": "^1.0.0",
+    "think-model-mysql": "^1.0.0",
+    "think-session": "^1.0.0",
     "think-session-file": "^1.0.5",
     "think-view": "^1.0.0",
     "think-view-nunjucks": "^1.0.1",
-    "think-model-mysql": "^1.0.0",
-    "think-logger3": "^1.0.0",
-    "thinkjs": "^3.0.0"
+    "thinkjs": "^3.0.0",
+    "to-markdown": "^3.1.1",
+    "upyun": "^3.3.4",
+    "wxr": "^0.1.2",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "think-watcher": "^3.0.0",
