--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "markdown-toc": "^1.2.0",
     "marked": "^0.3.12",
     "moment": "^2.20.1",
+    "nodemailer": "^2.7.2",
     "phpass": "^0.1.1",
+    "push-to-firekylin": "^0.2.3",
     "qiniu": "^7.1.2",
+    "request": "^2.83.0",
+    "semver": "^5.5.0",
+    "speakeasy": "^2.0.0",
     "think-cache": "^1.0.0",
     "think-cache-file": "^1.0.8",
     "think-logger3": "^1.0.0",
