add think-router-rest and update model merge

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "think-logger3": "^1.0.0",
     "think-model": "^1.0.0",
     "think-model-mysql": "^1.0.0",
+    "think-router-rest": "^1.0.2",
     "think-session": "^1.0.0",
     "think-session-file": "^1.0.5",
     "think-view": "^1.0.0",
