--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firekylin",
-  "description": "A Simple & Fast Node Bloging Platform Base On ThinkJS 3.x & ReactJS ^ ES2015+",
+  "description": "A Simple & Fast Node Bloging Platform Base On ThinkJS 3.x & ReactJS & ES2015+",
   "version": "1.0.0",
   "author": "lizheming <i@imnerd.org>",
   "scripts": {
