--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   },
   "globals": {
     "think": false,
-    "firekylin": false
+    "firekylin": false,
+    "Gitalk": false
   },
   "extends": [
     "think",
@@ -30,7 +31,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "webpack.config.babel.js"
+        "config": "webpack.config.js"
       }
     }
   },
