--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mathjax-node": "^1.3.0",
     "moment": "^2.20.1",
     "nodemailer": "^2.7.2",
+    "on-finished": "^2.3.0",
     "phpass": "^0.1.1",
     "push-to-firekylin": "^0.2.3",
     "qiniu": "^7.1.2",
