--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ali-oss": "^4.14.2",
     "co": "^4.6.0",
     "form-data": "^2.3.1",
+    "fs-extra": "^5.0.0",
     "highlight.js": "^9.12.0",
     "https": "^1.0.0",
     "jszip": "^3.1.5",
